--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^2.0.0",
     "@nuxtjs/supabase": "^1.6.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@vueuse/core": "^13.7.0",
